--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- Section 5: Wish Candle n Flower -->
     <section class="flex items-center justify-center min-h-screen bg-pink-300">
         <div
-            class="bg-white/70 backdrop-blur-lg max-w-6xl mx-auto flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 p-6 lg:p-12 rounded-xl shadow-xl border-2 bg-white">
+            class="bg-white/70 backdrop-blur-xl max-w-6xl mx-auto flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 p-6 lg:p-12 rounded-xl shadow-xl border-2 bg-white">
             <div class="w-full lg:w-1/2 flex justify-center items-center">
                 <img src="/src/img/timecount.JPG" alt="Foto Adek"
                     class="rounded-xl shadow-lg max-w-sm md:max-w-md lg:max-w-lg border-4">
