--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 
     <!-- Section 2: Timer Count -->
     <section id="timer"
-        class="h-screen flex flex-col items-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
+        class="justify-center h-screen flex flex-col items-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
         <h1 class="text-5xl md:text-6xl font-bold text-pink-600 mb-8 mt-12 text-center">
             Perjalanan Waktu Adek 💖
         </h1>
         <div
-            class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-white">
+            class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-transparant">
             <!-- Foto Adek -->
             <div class="w-full flex justify-center">
                 <img src="/src/img/timecount.JPG" alt="Foto Adek"
@@ -79,28 +79,32 @@
     </section>
 
     <!-- Section 3: Greating -->
-    <section class="h-screen flex flex-col justify-center bg-blue-100">
-        <div class="max-w-6xl mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center text-blue-500 mb-8">Our Services</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                    <h3 class="text-2xl font-semibold text-blue-500 mb-4">Custom Decor</h3>
-                    <p class="text-gray-700">Beautiful and personalized decorations to match your theme.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                    <h3 class="text-2xl font-semibold text-blue-500 mb-4">Entertainment</h3>
-                    <p class="text-gray-700">Live performances, games, and activities for all ages.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                    <h3 class="text-2xl font-semibold text-blue-500 mb-4">Catering</h3>
-                    <p class="text-gray-700">Delicious food options to satisfy every guest.</p>
+    <section class="h-screen flex justify-center items-center bg-blue-100">
+        <div
+            class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center lg:items-start space-y-8 lg:space-y-0 lg:space-x-12 p-6">
+            <div class="w-full lg:w-1/2 bg-orange-200 p-12 rounded-3xl shadow-lg">
+                <h2 class="text-5xl font-bold text-orange-600 mb-6">Happy Birthday! 🎉</h2>
+                <p class="text-2xl text-gray-700 leading-relaxed">
+                    Wishing you a day filled with love, laughter, and unforgettable memories! 🥳
+                    May this year bring you endless happiness and success.
+                </p>
+                <p class="mt-6 text-2xl text-gray-700 leading-relaxed">
+                    Here's to celebrating you today because you deserve the best! 🌟
+                </p>
+            </div>
+            <div class="w-full lg:w-1/2 flex justify-center items-center">
+                <div
+                    class="relative w-[500px] h-[500px] rounded-full overflow-hidden border-8 border-orange-400 shadow-2xl">
+                    <img id="slideshow" src="/src/img/AA.jpg" alt="Slideshow Foto"
+                        class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Section 4: Photo album -->
-    <section class="h-screen flex flex-col justify-center bg-gradient-to-t from-pink-300 via-white to-blue-100">
+    <section
+        class="h-screen flex flex-col justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-4xl font-bold text-center text-pink-500 mb-8">Matutu's Life Story 🗺️</h2>
             <img src="./src/img/1.png" alt="story1">
