--- a/index.html
+++ b/index.html
@@ -82,17 +82,18 @@
     <section class="h-screen flex justify-center items-center bg-blue-100">
         <div
             class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center lg:items-start space-y-8 lg:space-y-0 lg:space-x-12 p-6">
-            <div class="w-full lg:w-1/2 bg-orange-200 p-12 rounded-3xl shadow-lg">
-                <h2 class="text-5xl font-bold text-orange-600 mb-6">Happy Birthday! 🎉</h2>
-                <p class="text-2xl text-gray-700 leading-relaxed">
-                    Wishing you a day filled with love, laughter, and unforgettable memories! 🥳
-                    May this year bring you endless happiness and success.
+            <div class="w-full lg:w-3/5 bg-orange-200 p-12 rounded-3xl shadow-lg">
+                <h2 class="text-5xl font-bold text-orange-600 mb-6">Selamat Ulang Tahun Gadis Cantikk!!! 🎉</h2>
+                <p class="text-2xl text-gray-700 leading-relaxed text-justify">
+                    Banyak doa yang gabisa mas tuliskan di sini. Mas berharap adek bisa menjadi Adek Madu yang lebih
+                    baik
+                    dan semakin dewasa, sehat selalu, dan bisa mewujudkan apapun impian baik yang adek inginkan. ❤️😋
                 </p>
-                <p class="mt-6 text-2xl text-gray-700 leading-relaxed">
-                    Here's to celebrating you today because you deserve the best! 🌟
+                <p class="mt-6 text-2xl text-gray-700 leading-relaxed text-justify">
+                    Aamiin !!! Sayangi mas ya anak baik, selamat hari Matutu! 🌟
                 </p>
             </div>
-            <div class="w-full lg:w-1/2 flex justify-center items-center">
+            <div class="w-full lg:w-2/5 flex justify-center items-center">
                 <div
                     class="relative w-[500px] h-[500px] rounded-full overflow-hidden border-8 border-orange-400 shadow-2xl">
                     <img id="slideshow" src="/src/img/AA.jpg" alt="Slideshow Foto"
