--- a/page2.html
+++ b/page2.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <h1>
-        Ayoo berdoa dan pencet lilinnya adekk 😊</h1>
+    <h1>Ayoo berdoa dan pencet lilinnya adekk 😊</h1>
     <div class="glow" id="glow"></div>
     <div id="candle">
         <div class="stripe"></div>
@@ -30,6 +29,9 @@
             <div class="burn" id="flame"></div>
         </div>
     </div>
+    <div id="message" class="hidden"></div>
+    <button id="redirectButton" class="hidden" onclick="redirectPage()">Ada satu kejutan lagi nihhh</button>
+
 </body>
 
 </html>
