--- a/index.html
+++ b/index.html
@@ -104,14 +104,17 @@
     </section>
 
     <!-- Section 4: Photo album -->
-    <section class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100">
-        <div class="max-w-3xl w-full flex flex-col items-center px-6 text-center space-y-8">
-            <h2 class="text-5xl font-bold text-pink-500">Matutu's Life Story 🗺️</h2>
-            <img src="./src/img/1.png" alt="story1" class="w-full max-w-md rounded-xl shadow-lg">
-            <img src="./src/img/2.png" alt="story2" class="w-full max-w-md rounded-xl shadow-lg">
+    <section
+        class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100 relative">
+        <img src="/src/img/party.svg" alt="balon kiri"
+            class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-sm h-auto" />
+        <img src="/src/img/party.svg" alt="balon kanan"
+            class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-sm h-auto" />
+        <div class="w-full h-full flex flex-col items-center text-center">
+            <h2 class="text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
+            <img src="/src/img/card.png" alt="story1" class="w-full h-auto max-w-screen-lg object-contain" />
         </div>
     </section>
-
 
     <!-- Section 5: Passcode -> candle -->
     <section class="h-screen flex items-center justify-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
