--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
         .animate-floating {
             animation: floating 5s ease-in-out infinite;
         }
+
+        .spin-animation {
+            animation: spin 5s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
     </style>
 </head>
 
@@ -82,25 +96,38 @@
     <section class="h-screen flex justify-center items-center bg-blue-100">
         <div
             class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center lg:items-start space-y-8 lg:space-y-0 lg:space-x-12 p-6">
-            <div class="w-full lg:w-3/5 bg-orange-200 p-12 rounded-3xl shadow-lg">
-                <h2 class="text-5xl font-bold text-orange-600 mb-6">Selamat Ulang Tahun Gadis Cantikk!!! 🎉</h2>
+            <!-- Pesan Ucapan -->
+            <div class="w-full lg:w-3/5 bg-pink-300 p-12 rounded-3xl shadow-lg">
+                <h2 class="text-5xl font-bold text-orange-600 mb-6">
+                    Selamat Ulang Tahun Gadis Cantikk!!! 🎉
+                </h2>
                 <p class="text-2xl text-gray-700 leading-relaxed text-justify">
                     Banyak doa yang gabisa mas tuliskan di sini. Mas berharap adek bisa menjadi Adek Madu yang lebih
-                    baik
-                    dan semakin dewasa, sehat selalu, dan bisa mewujudkan apapun impian baik yang adek inginkan. ❤️😋
+                    baik dan semakin dewasa, sehat selalu, dan bisa mewujudkan apapun impian baik yang adek inginkan.
+                    ❤️😋
                 </p>
                 <p class="mt-6 text-2xl text-gray-700 leading-relaxed text-justify">
                     Aamiin !!! Sayangi mas ya anak baik, selamat hari Matutu! 🌟
                 </p>
             </div>
+            <!-- Piringan Hitam -->
             <div class="w-full lg:w-2/5 flex justify-center items-center">
                 <div
-                    class="relative w-[500px] h-[500px] rounded-full overflow-hidden border-8 border-orange-400 shadow-2xl">
+                    class="relative w-[500px] h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
                     <img id="slideshow" src="/src/img/AA.jpg" alt="Slideshow Foto"
-                        class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000">
+                        class="absolute inset-0 w-full h-full object-cover">
                 </div>
             </div>
         </div>
+        <!-- Tombol untuk Memulai Audio -->
+        <button id="playButton" class="mt-6 px-6 py-3 bg-pink-300 text-white font-bold rounded-lg shadow-md">
+            Putar Lagu 🎵
+        </button>
+        <!-- Pemutar Lagu -->
+        <audio id="birthdaySong">
+            <source src="/src/song1.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </section>
 
     <!-- Section 4: Photo album -->
