--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="smooth-scroll">
 
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="x-icon" href="./src/img/icon_cake.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matutu Birthday❤️</title>
+    <title>Matutu Birthday ❤️</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="/src/script.js" defer></script>
@@ -14,11 +14,11 @@
 
             0%,
             100% {
-                transform: translateY(-250px);
+                transform: translateY(-20px);
             }
 
             50% {
-                transform: translateY(50px);
+                transform: translateY(20px);
             }
         }
 
@@ -27,7 +27,7 @@
         }
 
         .spin-animation {
-            animation: spin 5s linear infinite;
+            animation: spin 10s linear infinite;
         }
 
         @keyframes spin {
@@ -47,9 +47,9 @@
     <section id="opening"
         class="bg-pink-300 text-white min-h-screen flex flex-col justify-center items-center relative overflow-hidden px-4 md:px-8">
         <img src="./src/img/balloons (1).png" alt="balon 1"
-            class="absolute left-0 top-1/2 transform -translate-y-1/2 w-32 sm:w-40 md:w-60 lg:w-80 animate-floating">
+            class="absolute left-0 top-1/2 transform -translate-y-1/2 w-24 sm:w-40 md:w-60 lg:w-80 animate-floating">
         <img src="./src/img/balloons.png" alt="balon 2"
-            class="absolute right-0 top-1/2 transform -translate-y-1/2 w-32 sm:w-40 md:w-60 lg:w-80 animate-floating">
+            class="absolute right-0 top-1/2 transform -translate-y-1/2 w-24 sm:w-40 md:w-60 lg:w-80 animate-floating">
         <div class="text-center max-w-2xl">
             <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Hallo Adek cantikkk!!! 😊</h1>
             <p class="text-base sm:text-lg md:text-xl">Di hari yang spesial ini, ada sesuatu yang mungkin bisa membuat
@@ -64,7 +64,7 @@
     <!-- Section 2: Timer Count -->
     <section id="timer"
         class="justify-center h-screen flex flex-col items-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
-        <h1 class="text-5xl md:text-6xl font-bold text-pink-600 mb-8 mt-12 text-center">
+        <h1 class="text-4xl md:text-5xl font-bold text-pink-600 mb-8 mt-12 text-center">
             Perjalanan Waktu Adek 💖
         </h1>
         <div
@@ -96,34 +96,30 @@
     <section class="h-screen flex justify-center items-center bg-blue-100">
         <div
             class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center lg:items-start space-y-8 lg:space-y-0 lg:space-x-12 p-6">
-            <!-- Pesan Ucapan -->
             <div class="w-full lg:w-3/5 bg-pink-300 p-12 rounded-3xl shadow-lg">
-                <h2 class="text-5xl font-bold text-orange-600 mb-6">
+                <h2 class="text-4xl sm:text-5xl font-bold text-orange-600 mb-6">
                     Selamat Ulang Tahun Gadis Cantikk!!! 🎉
                 </h2>
-                <p class="text-2xl text-gray-700 leading-relaxed text-justify">
+                <p class="text-lg sm:text-2xl text-gray-700 leading-relaxed text-justify">
                     Banyak doa yang gabisa mas tuliskan di sini. Mas berharap adek bisa menjadi Adek Madu yang lebih
                     baik dan semakin dewasa, sehat selalu, dan bisa mewujudkan apapun impian baik yang adek inginkan.
                     ❤️😋
                 </p>
-                <p class="mt-6 text-2xl text-gray-700 leading-relaxed text-justify">
+                <p class="mt-6 text-lg sm:text-2xl text-gray-700 leading-relaxed text-justify">
                     Aamiin !!! Sayangi mas ya anak baik, selamat hari Matutu! 🌟
                 </p>
             </div>
-            <!-- Piringan Hitam -->
             <div class="w-full lg:w-2/5 flex justify-center items-center">
                 <div
-                    class="relative w-[500px] h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
+                    class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[500px] lg:h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
                     <img id="slideshow" src="/src/img/AA.jpg" alt="Slideshow Foto"
                         class="absolute inset-0 w-full h-full object-cover">
                 </div>
             </div>
         </div>
-        <!-- Tombol untuk Memulai Audio -->
         <button id="playButton" class="mt-6 px-6 py-3 bg-pink-300 text-white font-bold rounded-lg shadow-md">
             Putar Lagu 🎵
         </button>
-        <!-- Pemutar Lagu -->
         <audio id="birthdaySong">
             <source src="/src/song1.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -132,24 +128,22 @@
 
     <!-- Section 4: Photo album -->
     <section
-        class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100 relative">
+        class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100 relative px-4 md:px-8">
         <img src="/src/img/party.svg" alt="balon kiri"
-            class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-sm h-auto" />
+            class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
         <img src="/src/img/party.svg" alt="balon kanan"
-            class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-sm h-auto" />
-        <div class="w-full h-full flex flex-col items-center text-center">
-            <h2 class="text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
-            <img src="/src/img/card.png" alt="story1" class="w-full h-auto max-w-screen-lg object-contain" />
+            class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
+        <div class="w-full flex flex-col items-center text-center">
+            <h2 class="text-3xl md:text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
+            <img src="/src/img/card.png" alt="story1" class="w-full max-w-lg object-contain" />
         </div>
     </section>
 
-    <!-- Section 5: Passcode -> candle -->
-    <section class="h-screen flex items-center justify-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
-        <h1 class="text-5xl md:text-6xl font-bold text-pink-600 mb-8 mt-12 text-center">
-            Menuju Kejutan Hangat 🔥
-        </h1>
+    <!-- Section 5: Passcode -->
+    <section
+        class="h-screen flex items-center justify-center bg-gradient-to-b from-pink-300 via-white to-blue-100 px-4 md:px-8">
         <div
-            class="bg-white/70 backdrop-blur-xl max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 p-8 lg:p-12 rounded-xl shadow-2xl">
+            class="max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 bg-white/70 backdrop-blur-xl p-8 lg:p-12 rounded-xl shadow-2xl">
             <!-- Foto Section -->
             <div class="w-full lg:w-1/2 flex justify-center items-center">
                 <img src="/src/img/timecount.JPG" alt="Foto Adek"
@@ -189,7 +183,6 @@
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
