--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
             class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
         <img src="/src/img/party.svg" alt="balon kanan"
             class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
-        <div class="w-full flex flex-col items-center text-center">
+        <div class="w-full h-full flex flex-col items-center text-center">
             <h2 class="text-3xl md:text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
-            <img src="/src/img/card.png" alt="story1" class="w-full max-w-lg object-contain" />
+            <div class="w-full h-full max-w-5xl flex justify-center items-center overflow-hidden">
+                <img src="/src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
+            </div>
         </div>
     </section>
 
