update all asset

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-transparant">
             <!-- Foto Adek -->
             <div class="w-full flex justify-center">
-                <img src="/src/img/timecount.JPG" alt="Foto Adek"
+                <img src="/src/img/time.jpg" alt="Foto Adek"
                     class="rounded-xl shadow-lg max-w-xs sm:max-w-sm md:max-w-md border-4">
             </div>
 
@@ -148,7 +148,7 @@
             class="max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 bg-white/70 backdrop-blur-xl p-8 lg:p-12 rounded-xl shadow-2xl">
             <!-- Foto Section -->
             <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="/src/img/timecount.JPG" alt="Foto Adek"
+                <img src="/src/img/passcode.JPG" alt="Foto Adek"
                     class="rounded-xl shadow-lg w-full max-w-xs md:max-w-sm lg:max-w-md border-4 border-gray-200">
             </div>
             <!-- Passcode Section -->
