--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Matutu Birthday ❤️</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="/src/script.js" defer></script>
+    <script src="./src/script.js" defer></script>
     <style>
         @keyframes floating {
 
@@ -71,7 +71,7 @@
             class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-transparant">
             <!-- Foto Adek -->
             <div class="w-full flex justify-center">
-                <img src="/src/img/time.jpg" alt="Foto Adek"
+                <img src="./src/img/time.jpg" alt="Foto Adek"
                     class="rounded-xl shadow-lg max-w-xs sm:max-w-sm md:max-w-md border-4">
             </div>
 
@@ -81,12 +81,12 @@
                     Hemm... 🤔 Usia adek hari ini berapa ya???
                 </h2>
                 <p class="text-lg sm:text-xl md:text-2xl font-semibold leading-relaxed">
-                    <span id="years" class="text-pink-500">19</span> tahun,
-                    <span id="months" class="text-purple-500">11</span> bulan,
-                    <span id="days" class="text-red-500">16</span> hari,
-                    <span id="hours" class="text-blue-500">5</span> jam,
-                    <span id="minutes" class="text-green-500">30</span> menit,
-                    <span id="seconds" class="text-yellow-500">0</span> detik
+                    <span id="years" class="text-pink-500"></span> tahun,
+                    <span id="months" class="text-purple-500"></span> bulan,
+                    <span id="days" class="text-red-500"></span> hari,
+                    <span id="hours" class="text-blue-500"></span> jam,
+                    <span id="minutes" class="text-green-500"></span> menit,
+                    <span id="seconds" class="text-yellow-500"></span> detik
                 </p>
             </div>
         </div>
@@ -112,7 +112,7 @@
             <div class="w-full lg:w-2/5 flex justify-center items-center">
                 <div
                     class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[500px] lg:h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
-                    <img id="slideshow" src="/src/img/AA.jpg" alt="Slideshow Foto"
+                    <img id="slideshow" src="./src/img/AA.jpg" alt="Slideshow Foto"
                         class="absolute inset-0 w-full h-full object-cover">
                 </div>
             </div>
@@ -121,7 +121,7 @@
             Putar Lagu 🎵
         </button>
         <audio id="birthdaySong">
-            <source src="/src/song1.mp3" type="audio/mpeg">
+            <source src="./src/song1.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </section>
@@ -129,14 +129,14 @@
     <!-- Section 4: Photo album -->
     <section
         class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100 relative px-4 md:px-8">
-        <img src="/src/img/party.svg" alt="balon kiri"
+        <img src="./src/img/party.svg" alt="balon kiri"
             class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
-        <img src="/src/img/party.svg" alt="balon kanan"
+        <img src="./src/img/party.svg" alt="balon kanan"
             class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
         <div class="w-full h-full flex flex-col items-center text-center">
             <h2 class="text-3xl md:text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
             <div class="w-full h-full max-w-5xl flex justify-center items-center overflow-hidden">
-                <img src="/src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
+                <img src="./src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
             </div>
         </div>
     </section>
@@ -148,7 +148,7 @@
             class="max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 bg-white/70 backdrop-blur-xl p-8 lg:p-12 rounded-xl shadow-2xl">
             <!-- Foto Section -->
             <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="/src/img/passcode.JPG" alt="Foto Adek"
+                <img src="./src/img/passcode.JPG" alt="Foto Adek"
                     class="rounded-xl shadow-lg w-full max-w-xs md:max-w-sm lg:max-w-md border-4 border-gray-200">
             </div>
             <!-- Passcode Section -->
