--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="./src/script.js" defer></script>
-    <base href="/[BirthdayProject]">
+    <base href="/[https://github.com/rifqiadrianto007/BirthdayProject]">
     <style>
         @keyframes floating {
 
