--- a/page2.html
+++ b/page2.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./src/img/icon_cake.svg">
+    <link rel="shortcut icon" type="x-icon" href="src/img/icon_cake.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Matutu Birthday❤️</title>
-    <link rel="stylesheet" href="./src/candle.css">
-    <script src="./src/candle.js"></script>
+    <link rel="stylesheet" href="src/candle.css">
+    <script src="src/candle.js"></script>
 
 </head>
 
