--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="./src/img/icon_cake.svg">
+    <link rel="shortcut icon" type="x-icon" href="src/img/icon_cake.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matutu Birthday ❤️</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="./src/script.js" defer></script>
-    <base href="/[https://github.com/rifqiadrianto007/BirthdayProject]">
+    <script src="src/script.js" defer></script>
+    <!-- <base href="/[https://github.com/rifqiadrianto007/BirthdayProject]"> -->
     <style>
         @keyframes floating {
 
@@ -47,9 +47,9 @@
     <!-- Section 1 : Opening -->
     <section id="opening"
         class="bg-pink-300 text-white min-h-screen flex flex-col justify-center items-center relative overflow-hidden px-4 md:px-8">
-        <img src="./src/img/balloons (1).png" alt="balon 1"
+        <img src="src/img/balloons (1).png" alt="balon 1"
             class="absolute left-0 top-1/2 transform -translate-y-1/2 w-24 sm:w-40 md:w-60 lg:w-80 animate-floating">
-        <img src="./src/img/balloons.png" alt="balon 2"
+        <img src="src/img/balloons.png" alt="balon 2"
             class="absolute right-0 top-1/2 transform -translate-y-1/2 w-24 sm:w-40 md:w-60 lg:w-80 animate-floating">
         <div class="text-center max-w-2xl">
             <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Hallo Adek cantikkk!!! 😊</h1>
@@ -72,7 +72,7 @@
             class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-transparant">
             <!-- Foto Adek -->
             <div class="w-full flex justify-center">
-                <img src="./src/img/time.jpg" alt="Foto Adek"
+                <img src="src/img/time.jpg" alt="Foto Adek"
                     class="rounded-xl shadow-lg max-w-xs sm:max-w-sm md:max-w-md border-4">
             </div>
 
@@ -113,7 +113,7 @@
             <div class="w-full lg:w-2/5 flex justify-center items-center">
                 <div
                     class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[500px] lg:h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
-                    <img id="slideshow" src="./src/img/AA.jpg" alt="Slideshow Foto"
+                    <img id="slideshow" src="src/img/AA.jpg" alt="Slideshow Foto"
                         class="absolute inset-0 w-full h-full object-cover">
                 </div>
             </div>
@@ -122,7 +122,7 @@
             Putar Lagu 🎵
         </button>
         <audio id="birthdaySong">
-            <source src="./src/song1.mp3" type="audio/mpeg">
+            <source src="src/song1.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </section>
@@ -130,14 +130,14 @@
     <!-- Section 4: Photo album -->
     <section
         class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100 relative px-4 md:px-8">
-        <img src="./src/img/party.svg" alt="balon kiri"
+        <img src="src/img/party.svg" alt="balon kiri"
             class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
-        <img src="./src/img/party.svg" alt="balon kanan"
+        <img src="src/img/party.svg" alt="balon kanan"
             class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
         <div class="w-full h-full flex flex-col items-center text-center">
             <h2 class="text-3xl md:text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
             <div class="w-full h-full max-w-5xl flex justify-center items-center overflow-hidden">
-                <img src="./src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
+                <img src="src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
             </div>
         </div>
     </section>
@@ -149,7 +149,7 @@
             class="max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 bg-white/70 backdrop-blur-xl p-8 lg:p-12 rounded-xl shadow-2xl">
             <!-- Foto Section -->
             <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="./src/img/passcode.JPG" alt="Foto Adek"
+                <img src="src/img/passcode.JPG" alt="Foto Adek"
                     class="rounded-xl shadow-lg w-full max-w-xs md:max-w-sm lg:max-w-md border-4 border-gray-200">
             </div>
             <!-- Passcode Section -->
