--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="src/script.js" defer></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- <base href="/[https://github.com/rifqiadrianto007/BirthdayProject]"> -->
     <style>
         @keyframes floating {
@@ -46,7 +47,8 @@
 <body class="bg-pink-100 font-sans">
     <!-- Section 1 : Opening -->
     <section id="opening"
-        class="bg-pink-300 text-white min-h-screen flex flex-col justify-center items-center relative overflow-hidden px-4 md:px-8">
+        class="bg-pink-300 text-white min-h-screen flex flex-col justify-center items-center relative overflow-hidden px-4 md:px-8"
+        data-aos="fade-up">
         <img src="src/img/balloons (1).png" alt="balon 1"
             class="absolute left-0 top-1/2 transform -translate-y-1/2 w-24 sm:w-40 md:w-60 lg:w-80 animate-floating">
         <img src="src/img/balloons.png" alt="balon 2"
@@ -65,79 +67,86 @@
     <!-- Section 2: Timer Count -->
     <section id="timer"
         class="justify-center h-screen flex flex-col items-center bg-gradient-to-b from-pink-300 via-white to-blue-100">
-        <h1 class="text-4xl md:text-5xl font-bold text-pink-600 mb-8 mt-12 text-center">
-            Perjalanan Waktu Adek 💖
-        </h1>
-        <div
-            class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-transparant">
-            <!-- Foto Adek -->
-            <div class="w-full flex justify-center">
-                <img src="src/img/time.jpg" alt="Foto Adek"
-                    class="rounded-xl shadow-lg max-w-xs sm:max-w-sm md:max-w-md border-4">
-            </div>
+        <div data-aos="fade-up">
+            <h1 class="text-4xl md:text-5xl font-bold text-pink-600 mb-8 mt-12 text-center">
+                Perjalanan Waktu Adek 💖
+            </h1>
+            <div
+                class="w-full max-w-3xl mx-auto flex flex-col items-center space-y-6 p-6 rounded-xl shadow-xl border-2 bg-transparant">
+                <!-- Foto Adek -->
+                <div class="w-full flex justify-center">
+                    <img src="src/img/time.jpg" alt="Foto Adek"
+                        class="rounded-xl shadow-lg max-w-xs sm:max-w-sm md:max-w-md border-4">
+                </div>
 
-            <!-- Time Count -->
-            <div class="w-full text-center">
-                <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-pink-500 mb-4">
-                    Hemm... 🤔 Usia adek hari ini berapa ya???
-                </h2>
-                <p class="text-lg sm:text-xl md:text-2xl font-semibold leading-relaxed">
-                    <span id="years" class="text-pink-500"></span> tahun,
-                    <span id="months" class="text-purple-500"></span> bulan,
-                    <span id="days" class="text-red-500"></span> hari,
-                    <span id="hours" class="text-blue-500"></span> jam,
-                    <span id="minutes" class="text-green-500"></span> menit,
-                    <span id="seconds" class="text-yellow-500"></span> detik
-                </p>
+                <!-- Time Count -->
+                <div class="w-full text-center">
+                    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-pink-500 mb-4">
+                        Hemm... 🤔 Usia adek hari ini berapa ya???
+                    </h2>
+                    <p class="text-lg sm:text-xl md:text-2xl font-semibold leading-relaxed">
+                        <span id="years" class="text-pink-500"></span> tahun,
+                        <span id="months" class="text-purple-500"></span> bulan,
+                        <span id="days" class="text-red-500"></span> hari,
+                        <span id="hours" class="text-blue-500"></span> jam,
+                        <span id="minutes" class="text-green-500"></span> menit,
+                        <span id="seconds" class="text-yellow-500"></span> detik
+                    </p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Section 3: Greating -->
     <section class="h-screen flex justify-center items-center bg-blue-100">
-        <div
-            class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center lg:items-start space-y-8 lg:space-y-0 lg:space-x-12 p-6">
-            <div class="w-full lg:w-3/5 bg-pink-300 p-12 rounded-3xl shadow-lg">
-                <h2 class="text-4xl sm:text-5xl font-bold text-orange-600 mb-6">
-                    Selamat Ulang Tahun Gadis Cantikk!!! 🎉
-                </h2>
-                <p class="text-lg sm:text-2xl text-gray-700 leading-relaxed text-justify">
-                    Banyak doa yang gabisa mas tuliskan di sini. Mas berharap adek bisa menjadi Adek Madu yang lebih
-                    baik dan semakin dewasa, sehat selalu, dan bisa mewujudkan apapun impian baik yang adek inginkan.
-                    ❤️😋
-                </p>
-                <p class="mt-6 text-lg sm:text-2xl text-gray-700 leading-relaxed text-justify">
-                    Aamiin !!! Sayangi mas ya anak baik, selamat hari Matutu! 🌟
-                </p>
-            </div>
-            <div class="w-full lg:w-2/5 flex justify-center items-center">
-                <div
-                    class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[500px] lg:h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
-                    <img id="slideshow" src="src/img/AA.jpg" alt="Slideshow Foto"
-                        class="absolute inset-0 w-full h-full object-cover">
+        <div data-aos="fade-up">
+            <div
+                class="max-w-6xl w-full mx-auto flex flex-col lg:flex-row items-center lg:items-start space-y-8 lg:space-y-0 lg:space-x-12 p-6">
+                <div class="w-full lg:w-3/5 bg-pink-300 p-12 rounded-3xl shadow-lg">
+                    <h2 class="text-4xl sm:text-5xl font-bold text-orange-600 mb-6">
+                        Selamat Ulang Tahun Gadis Cantikk!!! 🎉
+                    </h2>
+                    <p class="text-lg sm:text-2xl text-gray-700 leading-relaxed text-justify">
+                        Banyak doa yang gabisa mas tuliskan di sini. Mas berharap adek bisa menjadi Adek Madu yang lebih
+                        baik dan semakin dewasa, sehat selalu, dan bisa mewujudkan apapun impian baik yang adek
+                        inginkan.
+                        ❤️😋
+                    </p>
+                    <p class="mt-6 text-lg sm:text-2xl text-gray-700 leading-relaxed text-justify">
+                        Aamiin !!! Sayangi mas ya anak baik, selamat hari Matutu! 🌟
+                    </p>
+                </div>
+                <div class="w-full lg:w-2/5 flex justify-center items-center">
+                    <div
+                        class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[500px] lg:h-[500px] rounded-full overflow-hidden border-8 border-pink-400 shadow-2xl spin-animation">
+                        <img id="slideshow" src="src/img/AA.jpg" alt="Slideshow Foto"
+                            class="absolute inset-0 w-full h-full object-cover">
+                    </div>
                 </div>
             </div>
+            <button id="playButton" class="mt-6 px-6 py-3 bg-pink-300 text-white font-bold rounded-lg shadow-md">
+                Putar Lagu 🎵
+            </button>
+            <audio id="birthdaySong">
+                <source src="src/song1.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
         </div>
-        <button id="playButton" class="mt-6 px-6 py-3 bg-pink-300 text-white font-bold rounded-lg shadow-md">
-            Putar Lagu 🎵
-        </button>
-        <audio id="birthdaySong">
-            <source src="src/song1.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
     </section>
 
     <!-- Section 4: Photo album -->
     <section
         class="h-screen flex justify-center items-center bg-gradient-to-t from-pink-300 via-white to-blue-100 relative px-4 md:px-8">
-        <img src="src/img/party.svg" alt="balon kiri"
-            class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
-        <img src="src/img/party.svg" alt="balon kanan"
-            class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
-        <div class="w-full h-full flex flex-col items-center text-center">
-            <h2 class="text-3xl md:text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
-            <div class="w-full h-full max-w-5xl flex justify-center items-center overflow-hidden">
-                <img src="src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
+        <div data-aos="fade-up">
+            <img src="src/img/party.svg" alt="balon kiri"
+                class="absolute left-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
+            <img src="src/img/party.svg" alt="balon kanan"
+                class="absolute right-10 top-1/4 animate-floating w-1/6 max-w-xs lg:max-w-sm h-auto" />
+            <div class="w-full h-full flex flex-col items-center text-center">
+                <h2 class="text-3xl md:text-5xl font-bold text-pink-500 mb-4">Matutu's Life Story 🗺️</h2>
+                <div class="w-full h-full max-w-5xl flex justify-center items-center overflow-hidden">
+                    <img src="src/img/matutu.png" alt="story1" class="w-full h-full object-cover md:object-contain" />
+                </div>
             </div>
         </div>
     </section>
@@ -145,47 +154,53 @@
     <!-- Section 5: Passcode -->
     <section
         class="h-screen flex items-center justify-center bg-gradient-to-b from-pink-300 via-white to-blue-100 px-4 md:px-8">
-        <div
-            class="max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 bg-white/70 backdrop-blur-xl p-8 lg:p-12 rounded-xl shadow-2xl">
-            <!-- Foto Section -->
-            <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="src/img/passcode.JPG" alt="Foto Adek"
-                    class="rounded-xl shadow-lg w-full max-w-xs md:max-w-sm lg:max-w-md border-4 border-gray-200">
-            </div>
-            <!-- Passcode Section -->
-            <div class="w-full lg:w-1/2">
-                <input type="password" id="passcode" placeholder="Enter passcode" readonly
-                    class="w-full p-4 mb-6 text-center text-xl font-medium border border-gray-300 rounded-lg bg-transparent focus:outline-none focus:ring-2 focus:ring-blue-400">
-                <!-- Keypad -->
-                <div class="grid grid-cols-3 gap-4">
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(1)">1</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(2)">2</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(3)">3</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(4)">4</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(5)">5</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(6)">6</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(7)">7</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(8)">8</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(9)">9</button>
-                    <button class="bg-red-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-red-300"
-                        onclick="clearPasscode()">C</button>
-                    <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
-                        onclick="pressKey(0)">0</button>
-                    <button class="bg-green-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-green-300"
-                        onclick="submitPasscode()">OK</button>
+        <div data-aos="fade-up">
+            <div
+                class="max-w-4xl w-full flex flex-col lg:flex-row items-center space-y-8 lg:space-y-0 lg:space-x-12 bg-white/70 backdrop-blur-xl p-8 lg:p-12 rounded-xl shadow-2xl">
+                <!-- Foto Section -->
+                <div class="w-full lg:w-1/2 flex justify-center items-center">
+                    <img src="src/img/passcode.JPG" alt="Foto Adek"
+                        class="rounded-xl shadow-lg w-full max-w-xs md:max-w-sm lg:max-w-md border-4 border-gray-200">
+                </div>
+                <!-- Passcode Section -->
+                <div class="w-full lg:w-1/2">
+                    <input type="password" id="passcode" placeholder="Enter passcode" readonly
+                        class="w-full p-4 mb-6 text-center text-xl font-medium border border-gray-300 rounded-lg bg-transparent focus:outline-none focus:ring-2 focus:ring-blue-400">
+                    <!-- Keypad -->
+                    <div class="grid grid-cols-3 gap-4">
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(1)">1</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(2)">2</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(3)">3</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(4)">4</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(5)">5</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(6)">6</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(7)">7</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(8)">8</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(9)">9</button>
+                        <button class="bg-red-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-red-300"
+                            onclick="clearPasscode()">C</button>
+                        <button class="bg-gray-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-gray-300"
+                            onclick="pressKey(0)">0</button>
+                        <button class="bg-green-200 text-black text-2xl p-4 rounded-lg shadow hover:bg-green-300"
+                            onclick="submitPasscode()">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
